# AustereCache

./: .gitignore  CMakeLists.txt  DEV_LOG  LICENSE  README.md  time_schedule
conf/: example_comp.json  example_nocomp.json  example_output.txt  webvm_no_compression.json
conf/homes/compression/acdc/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
conf/homes/compression/cdarc/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
conf/homes/no_compression/acdc/: 1.json  5.json  8.json
conf/homes/no_compression/cdarc/: 1.json  2.json  3.json  4.json  6.json  7.json  8.json
conf/homes/no_compression/darc/: 6.json  7.json
conf/homes/no_compression/dlru/: 2.json  3.json  4.json  5.json
conf/mail/compression/acdc/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
conf/mail/compression/cdarc/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
conf/mail/no_compression/acdc/: 8.json
conf/mail/no_compression/cdarc/: 1.json  2.json  3.json  4.json  6.json  7.json  8.json  t.sh
conf/mail/no_compression/darc/: 3.json  4.json  5.json  6.json  7.json
conf/mail/no_compression/dlru/: 1.json  2.json
conf/webvm/compression/acdc/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
conf/webvm/compression/cdarc/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
conf/webvm/no_compression/acdc/: 1.json
conf/webvm/no_compression/cdarc/: 1.json  2.json  3.json  4.json  6.json  7.json  8.json
conf/webvm/no_compression/darc/: 2.json  4.json  6.json
conf/webvm/no_compression/dlru/: 3.json  5.json  7.json  8.json
docs/: metadata-module.md  overview.md
scripts/: generate_access_pattern.sh  generate_result_csv.sh  generate_trace.sh  run_compression.sh  run_dedup.sh  run_exp.sh  run_hit_ratio.sh  run_system.sh  run_write_buffer.sh  run_write_buffer_wr_ratio_0.5.sh  try.sh
src/: t
src/austere_cache/: austere_cache.cc  austere_cache.h  austere_cache_compression.cc  austere_cache_no_compression.cc
src/benchmark/: access_pattern_gen.cc  compression.cc  run.cc  run_chunk.cc  run_compression.cc  run_dedup.cc  run_fiu.cc  run_ssddup.cc  test_lz4.cc  trace_gen.cc  workload_conf.h
src/chunk/: chunkmodule.cc  chunkmodule.h
src/chunking/: chunk_module.cc  chunk_module.h
src/common/: common.h  config.h  env.h  stats.h
src/compression/: compression_module.cc  compression_module.h  compressionmodule.cc  compressionmodule.h  micro_benchmark.cc  test.h
src/deduplication/: deduplication_module.cc  deduplication_module.h  deduplicationmodule.cc  deduplicationmodule.h
src/device/: device.cc  device.cpp  device.h
src/index/: bitmap.h  bucket.cpp  bucket.h  index.cpp  index.h
src/io/: io_module.cc  io_module.h  iomodule.cc  iomodule.h  test.h  weu.h  writebuffer.cc  writebuffer.h
src/io/device/: device.cc  device.h
src/manage/: DirtyList.cc  DirtyList.h  DirtyListACDC.cc  DirtyListCDARC.cc  DirtyListCacheDedup.cc  dirty_list.cc  dirty_list.h  dirtylist.cc  dirtylist.h  dirtylist_austerecache.cc  dirtylist_cachededup.cc  dirtylist_cdarc.cc  manage_module.cc  manage_module.h  managemodule.cc  managemodule.h  writebuffer.cc  writebuffer.h
src/metadata/: CachePolicy.cc  CachePolicy.h  MetadataModule.cc  MetadataModule.h  MetadataModuleBucketDLRU.cc  MetadataModuleCDARC.cc  MetadataModuleDARC.cc  MetadataModuleDLRU.cc  ReferenceCounter.cc  ReferenceCounter.h  bitmap.h  bucket.cc  bucket.h  cache_policy.cc  cache_policy.h  cachededup_index.cc  cachededup_index.h  common.h  frequentslots.h  index.cc  index.h  meta_journal.cc  meta_journal.h  meta_verification.cc  meta_verification.h  metadata_module.cc  metadata_module.h  metadata_module_bucket_dlru.cc  metadata_module_cdarc.cc  metadata_module_darc.cc  metadata_module_dlru.cc  metadatamodule.cc  metadatamodule.h  metajournal.cc  metajournal.h  metaverification.cc  metaverification.h  reference_counter.cc  reference_counter.h  test.h  (+1 more)
src/metadata/cacheDedup/: BucketDLRUFPIndex.cc  BucketDLRUFPIndex.h  BucketDLRULBAIndex.cc  BucketDLRULBAIndex.h  CDARCFPIndex.cc  CDARCFPIndex.h  DARCFPIndex.cc  DARCFPIndex.h  DARCLBAIndex.cc  DARCLBAIndex.h  DLRUFPIndex.cc  DLRUFPIndex.h  DLRULBAIndex.cc  DLRULBAIndex.h  cacheDedupCommon.cc  cacheDedupCommon.h
src/metadata/cachePolicies/: BucketAwareLRU.cc  BucketAwareLRU.h  CAClock.cc  CAClock.h  CachePolicy.cc  CachePolicy.h  LRU.cc  LRU.h  LeastReferenceCount.cc  LeastReferenceCount.h  ThresholdRCClock.cc  ThresholdRCClock.h
src/metadata/cache_policies/: bucket_aware_lru.cc  bucket_aware_lru.h  cache_policy.cc  cache_policy.h  least_reference_count.cc  least_reference_count.h  lru.cc  lru.h
src/metadata/cachededup/: bucketdlru_fpindex.cc  bucketdlru_fpindex.h  bucketdlru_lbaindex.cc  bucketdlru_lbaindex.h  cdarc_fpindex.cc  cdarc_fpindex.h  common.cc  common.h  darc_fpindex.cc  darc_fpindex.h  darc_lbaindex.cc  darc_lbaindex.h  dlru_fpindex.cc  dlru_fpindex.h  dlru_lbaindex.cc  dlru_lbaindex.h
src/ssddup/: ssddup.cc  ssddup.h  ssddupCompression.cc  ssddupNoCompression.cc  test.h
src/test/: main.cpp
src/utils/: gen_zipf.h  thread_pool.h  utils.h
tests/: get_initial_state.cc  get_modified_trace.cc  process_traces.sh
traces/: calculate_basics.sh  generate  get_initial_state.cc  get_modified_trace.cc  process_traces.sh  syn_trace_gen.cc  syn_trace_gen.sh
